# nav-ai

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  Websearch.py  main.py  mainChat_draft.ipynb  nav-ai.txt  pyproject.toml  requirements.txt  test.ipynb
agents/career_summary/: career_summary_agent.py
agents/career_summary_node/: career_summary_agent.py  employee_info_node.py  prompt.py
agents/main_chatbot/: agent.py  agents.py  career_summary_agent.py  career_title_agent.py  cdgraph.py  chat_main.py  config.py  developstate.py  exception_agent.py  graph.py  graph_.py  learning_path_agent.py  main.py  ori_lp_agent.py  performance_monitor.py  prompt.py  prompt_v0.py  response.py  role_model_agent.py  states.py  supervisor_agent.py  tools.py
agents/main_chatbot_node/: certifications_node.py  coursera_node.py  internal_lecture_node.py  main.py
agents/mentor_chat/: config.py  mentor_chat_agent.py  mentor_chat_summary.py  sample_data.py
agents/persona_chat/: config.py  persona_chat_agent.py  (+1 more)
api/: Dockerfile  config.py  fastserver.py  requirements.txt
db/: mongo.py  postgres.py
k8s/: configmap.yaml  deploy.yaml  ingress.yaml  service.yaml
tools/: google_news_tool.py  postgres_tool.py  vector_search_tool.py  web_search_tool.py
vector_store/: check_info.py  chroma_client.py  chroma_search.py  chromadb_check.py  chromadb_create.py  config.py  employee_save.py  internal_check.py  internal_lecture_save.py  lecture_chromaDB.py  lecture_save.py  lecture_save_2.py  processed_emp_data.py  upsert_profile_vector.py  vector_store_test.py  vs_config.py
(+49 files in other folders)
